--- a/OC/Kexts/CPUFriend.kext/Contents/Info.plist
+++ b/OC/Kexts/CPUFriend.kext/Contents/Info.plist
@@ -3,100 +3,101 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18D109</string>
+	<string>18E226</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>VoodooI2CELAN</string>
+	<string>CPUFriend</string>
 	<key>CFBundleIdentifier</key>
-	<string>me.kishorprins.VoodooI2CELAN</string>
+	<string>org.vanilla.driver.CPUFriend</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>VoodooI2CELAN</string>
+	<string>CPUFriend</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.2.0</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.2.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E125</string>
+	<string>10E1001</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>18E219</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.14</string>
 	<key>DTXcode</key>
 	<string>1020</string>
 	<key>DTXcodeBuild</key>
-	<string>10E125</string>
+	<string>10E1001</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>Elan Trackpad</key>
+		<key>CPUFriend</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>me.kishorprins.VoodooI2CELAN</string>
+			<string>org.vanilla.driver.CPUFriend</string>
 			<key>IOClass</key>
-			<string>VoodooI2CELANTouchpadDriver</string>
-			<key>IOProbeScore</key>
-			<integer>200</integer>
-			<key>IOPropertyMatch</key>
-			<dict>
-				<key>name</key>
-				<string>ELAN0000</string>
-			</dict>
+			<string>CPUFriend</string>
+			<key>IOMatchCategory</key>
+			<string>CPUFriend</string>
 			<key>IOProviderClass</key>
-			<string>VoodooI2CDeviceNub</string>
-			<key>QuietTimeAfterTyping</key>
-			<integer>500</integer>
-			<key>RM,deliverNotifications</key>
-			<true/>
+			<string>IOResources</string>
+			<key>IOResourceMatch</key>
+			<string>IOKit</string>
 		</dict>
-		<key>VoodooI2CHIDDevice</key>
+		<key>CPUFriendPlatform</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>me.kishorprins.VoodooI2CELAN</string>
+			<string>org.vanilla.driver.CPUFriend</string>
 			<key>IOClass</key>
-			<string>VoodooI2CELANTouchpadDriver</string>
+			<string>CPUFriendData</string>
 			<key>IOProbeScore</key>
-			<integer>200</integer>
+			<integer>6000</integer>
 			<key>IOPropertyMatch</key>
 			<dict>
-				<key>compatible</key>
-				<string>PNP0C50</string>
+				<key>IOCPUNumber</key>
+				<integer>0</integer>
 			</dict>
 			<key>IOProviderClass</key>
-			<string>VoodooI2CDeviceNub</string>
-			<key>QuietTimeAfterTyping</key>
-			<integer>500</integer>
-			<key>RM,deliverNotifications</key>
-			<true/>
+			<string>AppleACPICPU</string>
+			<key>IOResourceMatch</key>
+			<string>ACPI</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 Kishor Prins. All rights reserved.</string>
+	<string>Copyright © 2017 - 2019 PMheart. All rights reserved.</string>
+	<key>OSBundleCompatibleVersion</key>
+	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>com.alexandred.VoodooI2C</key>
-		<string>2.0</string>
+		<key>as.vit9696.Lilu</key>
+		<string>1.2.0</string>
 		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.4</string>
-		<key>com.apple.iokit.IOHIDFamily</key>
-		<string>2.0</string>
+		<string>1.0.0d1</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.dsep</key>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>14</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>14</string>
+		<string>12.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>13.0</string>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>12.0.0</string>
 	</dict>
+	<key>OSBundleRequired</key>
+	<string>Root</string>
 </dict>
 </plist>
